welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:5: error: '=' expected but ';' found.
while (!estSurBiscuit)
^Program:11: error: '<-' expected but ')' found.
for (nbPasRetour!=nbPas)
                       ^Program:17: error: illegal start of simple expression
	}
        ^